# tds-data-analyst-agent

./: .env  Dockerfile  LICENSE  README.md  debug_gemini.py  env.example  gunicorn.conf.py  highest_grossing_films.html  main.py  nixpacks.toml  promptfoo.yaml  pyproject.toml  railway.toml  render.yaml  requirements.txt  sample_questions.txt  test_example.py
.cursor/rules/: environment.mdc
